Updated adoption form

--- a/createPet.html
+++ b/createPet.html
@@ -76,9 +76,10 @@
                                 mascota
                                 es?
                             </label>
-                            <input type="text"
-                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                                id="species">
+                            <select name="species" id="species" class="option-base">
+                                <option value="gato">Gato</option>
+                                <option value="perro">Perro</option>
+                            </select>
                         </div>
                         <br>
                         <div class="base-form d-flex flex-column justify-content-center">
@@ -97,9 +98,10 @@
                                 class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su
                                 sexo?
                             </label>
-                            <input type="text"
-                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                                id="sex">
+                            <select name="sex" id="sex" class="option-base">
+                                <option value="Macho">Macho</option>
+                                <option value="Hembra">Hembra</option>
+                            </select>
                         </div>
                         <br>
                         <div class="base-form d-flex flex-column justify-content-center">
@@ -108,9 +110,11 @@
                                 talla
                                 aproximada?
                             </label>
-                            <input type="text"
-                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                                id="size">
+                            <select name="size" id="size" class="option-base">
+                                <option value="Pequeño">Pequeño</option>
+                                <option value="Mediano">Mediano</option>
+                                <option value="Grande">Grande</option>
+                            </select>
                         </div>
                         <br>
                         <div class="base-form d-flex flex-column justify-content-center">
@@ -119,9 +123,14 @@
                                 sobre su
                                 carácter.
                             </label>
-                            <input type="text"
-                                class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                                id="character">
+                            <select name="character" id="character" class="option-base">
+                                <option value="Juguetón">Juguetón</option>
+                                <option value="Miedoso">Miedoso</option>
+                                <option value="Independiente">Independiente</option>
+                                <option value="Amistoso">Amistoso</option>
+                                <option value="Travieso">Travieso</option>
+                                <option value="Flojo">Flojo</option>
+                            </select>
                         </div>
                         <br>
                         <div class="base-form d-flex flex-column justify-content-center">
