--- a/homeShelter.html
+++ b/homeShelter.html
@@ -81,7 +81,7 @@
                 Mascotas en adopción
             </h1>
             <div class="filter-options">
-                <div class="d-flex flex-row align-items-center justify-content-center pb-4">
+                <!-- <div class="d-flex flex-row align-items-center justify-content-center pb-4">
                     <a href="">
                         <button class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">
                             <img src="assets/svg/filter.svg" alt="" style="width: 3em;" class="filter-img">
@@ -102,7 +102,7 @@
                     <a href="">
                         <button class="delete-all">Borrar todos</button>
                     </a>
-                </div>
+                </div> -->
 
                 <div class="search-pet d-flex flex-wrap pt-1">
                     
