--- a/profileUser.html
+++ b/profileUser.html
@@ -49,7 +49,7 @@
             </li>
         </ul>
     </nav>
-    
+
     <main>
         <div class="detail-user d-flex justify-content-center">
             <div class="detail-top pt-1">
@@ -62,31 +62,31 @@
                     <h2 class="user-name josefinsans-normal-black-30px d-flex justify-content-center pb-3"></h2>
                     <div class="d-flex flex-column">
                         <div class="main-info d-flex flex-wrap justify-content-around">
-                            <!-- <div class="age">
-                        <div class="main-info d-flex flex-wrap justify-content-around pe-5">
-                            <div class="age">
-                                <p class="josefinsans-chetwode-blue-18px">EDAD</p>
-                                <p class="user-age"></p>
-                            </div> -->
-                            <div class="ocupation">
-                                <p class="josefinsans-chetwode-blue-18px">OCUPACIÓN</p>
-                                <p class="occupation-user"></p>
-                            </div>
-                            <div class="location">
-                                <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
-                                <p class="location-user"></p>
-                            </div>
-                        </div>
-                        <div class="secondary-info d-flex flex-wrap justify-content-center pe-5">
-                            <div>
-                                <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
-                                <p class="story-user"></p>
+                            <div class="">
+                                <!-- <div class="main-info d-flex flex-wrap justify-content-around"> -->
+                                    <!-- <div class="age">
+                                        <p class="josefinsans-chetwode-blue-18px">EDAD</p>
+                                        <p class="user-age"></p>
+                                    </div> -->
+                                    <div class="ocupation">
+                                        <p class="josefinsans-chetwode-blue-18px">OCUPACIÓN</p>
+                                        <p class="occupation-user"></p>
+                                    </div>
+                                    <div class="location">
+                                        <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
+                                        <p class="location-user"></p>
+                                    </div>
+                                </div>
+                                <div class="secondary-info d-flex flex-wrap justify-content-center pe-5">
+                                    <div>
+                                        <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
+                                        <p class="story-user"></p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
     </main>
 
     <footer text-center>
@@ -117,7 +117,7 @@
                 </li>
             </ul>
         </div>
-    
+
         <div class="icons-footer d-flex justify-content-evenly">
             <a href="https://www.facebook.com/Pawchontli-100149705588791" role="button">
                 <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
