--- a/searchDog.html
+++ b/searchDog.html
@@ -51,7 +51,7 @@
 
     <main>
         <div class="top">
-            <div class="background-orange">
+            <!-- <div class="background-orange">
                 <h2 class="josefinsans-normal-white-30px text-center py-4">Buscar un perro</h2>
             </div>
             <br>
@@ -79,7 +79,7 @@
                 <a href="">
                     <button class="delete-all">Borrar todos</button>
                 </a>
-            </div>
+            </div> -->
         </div>
         <div class="search-pet d-flex flex-wrap pt-1">
             <!-- <div class="card" style="width: 20rem;">
