--- a/searchCat.html
+++ b/searchCat.html
@@ -59,7 +59,7 @@
             <p class="josefinsans-normal-white-30px">Gatos</p>
         </div>
         <div class="filter-options">
-            <div class="d-flex flex-row align-items-center justify-content-center py-4">
+            <!-- <div class="d-flex flex-row align-items-center justify-content-center py-4">
                 <a href="">
                     <button class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">
                         <img src="assets/svg/filter.svg" alt="" style="width: 3em;">
@@ -79,7 +79,7 @@
                 <a href="">
                     <button class="delete-all">Borrar todos</button>
                 </a>
-            </div>
+            </div> -->
         </div>
         <div class="search-pet d-flex flex-wrap pt-1">
             <!-- <div class="card" style="width: 20rem;">
