--- a/adoptionRequestsListShelter.html
+++ b/adoptionRequestsListShelter.html
@@ -55,22 +55,12 @@
         </button>
         <ul class="container-inner-menu">
             <li>
-                <a href="homeShelter.html">
-                    Inicio
-                </a>
-            </li>
-            <li>
-                <a href="profileShelterEdit.html">
+                <a id='got-profile'>
                     Perfil
                 </a>
             </li>
             <li>
-                <a href="adoptionRequestsListShelter.html">
-                    Solicitudes
-                </a>
-            </li>
-            <li>
-                <a href="index.html">
+                <a id='log-out'>
                     Cerrar sesión
                 </a>
             </li>
