--- a/searchPet.html
+++ b/searchPet.html
@@ -37,7 +37,7 @@
         </button>
         <ul class="container-inner-menu">
             <li>
-                <a href="profileUserEdit.html">
+                <a id='got-profile' href="#">
                     Perfil
                 </a>
             </li>
